<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/driver_login"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryExtraDark"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="20.0dip"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_normal">

                <TextView
                    android:id="@+id/inputCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="+91"
                    android:textAlignment="center"
                    android:textColor="@color/color_gray_dark"
                    android:textColorHint="@color/white1"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputMobile"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_toEndOf="@id/inputCode"
                    android:background="@drawable/bg_edittext_normal"
                    android:hint="@string/hint_mobile"
                    android:inputType="phone"
                    android:paddingStart="15dp"
                    android:paddingEnd="@dimen/dimen_15dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/color_gray_dark"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:text="By registering with us, you agreeing to our"
                android:textAlignment="center"
                android:textColor="@color/color_gray_dark"
                android:textSize="16sp" />

            <Button
                style="@style/MyBorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:padding="0dp"
                android:text="Privacy Policy &amp; Terms of use"
                android:textAllCaps="false"
                android:textColor="@color/color_gray_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/btnSignin"
                    style="@style/ButtonPrimary"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.4"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.3" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnForgotPassword"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/forgot_password"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@drawable/selector_gray_text"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="24.0dip"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/link_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_signup"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@color/aluminum" />

                <Button
                    android:id="@+id/btnSignup"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:paddingLeft="0dp"
                    android:text="@string/link_signup"
                    android:textAllCaps="false"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="@drawable/selector_primary_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>